--- a/Data_Collection.ipynb
+++ b/Data_Collection.ipynb
@@ -13,6 +13,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Created by Mark Leschinsky and Alexander Calafiura at Stanford University."
+      ],
+      "metadata": {
+        "id": "m0pX8QTuQNrE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "\n",
         "### Querying Zip Codes from U.S. Census"
       ],
@@ -71,7 +80,7 @@
         "id": "-AIfDzVvNfID",
         "outputId": "033b0fe3-b1ae-4390-a121-cc583d31e713"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -370,7 +379,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -806,7 +815,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "PEfjdURGAcIt",
         "colab": {
@@ -1172,7 +1181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "zTeOTCJNSeBF",
         "colab": {
@@ -1218,7 +1227,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1326,7 +1335,7 @@
         "id": "GmxW16p3OztB",
         "outputId": "fc3ec18c-30ef-428e-82fb-851a611b9976"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1661,7 +1670,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1990,7 +1999,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2303,7 +2312,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2761,7 +2770,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
