--- a/Data_Collection.ipynb
+++ b/Data_Collection.ipynb
@@ -13,15 +13,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Created by Mark Leschinsky and Alexander Calafiura at Stanford University."
-      ],
-      "metadata": {
-        "id": "m0pX8QTuQNrE"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "\n",
         "### Querying Zip Codes from U.S. Census"
       ],
@@ -80,7 +71,7 @@
         "id": "-AIfDzVvNfID",
         "outputId": "033b0fe3-b1ae-4390-a121-cc583d31e713"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -379,7 +370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -815,7 +806,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "PEfjdURGAcIt",
         "colab": {
@@ -1181,7 +1172,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "zTeOTCJNSeBF",
         "colab": {
@@ -1227,7 +1218,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1256,7 +1247,7 @@
         "import time\n",
         "\n",
         "headers = {\n",
-        "    \"x-api-key\": \"QMVs4H9JiK1KF23lDzesf1GNbHIJ3IhaSraQxU5r\",\n",
+        "    \"x-api-key\": \"#CODE#HERE#\",\n",
         "}\n",
         "\n",
         "# Year for which to retrieve per diem rates\n",
@@ -1335,7 +1326,7 @@
         "id": "GmxW16p3OztB",
         "outputId": "fc3ec18c-30ef-428e-82fb-851a611b9976"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1670,7 +1661,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1999,7 +1990,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2312,7 +2303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2770,7 +2761,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
